force-app/main/default/objects/Patient_Letters__c/Patient_Letters__c.object-meta.xml
<CustomObject>
    <label>Patient Letter</label>
    <nameField>
        <displayFormat>Letter {00000}</displayFormat>
        <label>Patient Letters Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Patient Letters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>