force-app/main/default/objects/Patient_Letters__c/fields/Letter_Content__c.field-meta.xml
<CustomField>
    <fullName>Letter_Content__c</fullName>
    <label>Letter Content</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>