force-app/main/default/objects/Patient_Letters__c/fields/Letter_Date_and_Time__c.field-meta.xml
<CustomField>
    <fullName>Letter_Date_and_Time__c</fullName>
    <label>Letter Date and Time</label>
    <type>DateTime</type>
</CustomField>