force-app/main/default/objects/Patient_Letters__c/fields/Referring_Doctor__c.field-meta.xml
<CustomField>
    <fullName>Referring_Doctor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referring Doctor</label>
    <referenceTo>Doctor__c</referenceTo>
    <relationshipLabel>Patient Letters</relationshipLabel>
    <relationshipName>Patient_Letters</relationshipName>
    <type>Lookup</type>
</CustomField>